# physicar-ros

./: .gitattributes  .gitignore  NOTICE  README.ko.md  README.md  docker-compose.yml  entrypoint.sh  fastdds-lo.xml  updater.sh  wifi-hotspot-test-report.md
camera_ros/: CMakeLists.txt
deploy/: PASSWORD_RESET.md  README.md  create-device-image.sh  cyclonedds.xml  install-device.sh  install-sim.sh
deploy/device/: bashrc-append  fastdds-lo.xml  physicar-browser-ext.vsix  physicar.sh
deploy/device/boot/firmware/overlays/: pwm0-gpio13.dts
deploy/device/etc/X11/xorg.conf.d/: 10-no-dpms.conf
deploy/device/etc/chromium/policies/managed/: kiosk-policy.json
deploy/device/etc/modules-load.d/: physicar-wifi.conf
deploy/device/etc/netplan/: 01-netcfg.yaml
deploy/device/etc/nginx/sites-available/: physicar
deploy/device/etc/pip/: constraints.txt  pip.conf
deploy/device/etc/security/: pwquality.conf
deploy/device/etc/systemd/system/: physicar-code.service  physicar-myapp.service  physicar.service
deploy/device/etc/udev/rules.d/: 99-physicar.rules
deploy/device/etc/usb_modeswitch.d/: 0bda:1a2b
deploy/device/home/physicar/: bashrc-append
deploy/device/home/physicar/.local/share/code-server/User/: settings.json
deploy/device/usr/share/applications/: xterm.desktop
deploy/sim/: app-browser.sh  bashrc-append  entrypoint.sh  memory-setup.sh  physicar-browser-ext.vsix  physicar.sh  port-watchdog.sh  postAttach.sh  supervisord.conf
deploy/sim/etc/nginx/: root-404.conf  root-code.conf
deploy/sim/etc/nginx/conf.d/: pc-gate.conf  pc-token.conf  zz-pc-gate.conf
deploy/sim/etc/nginx/sites-available/: physicar
deploy/sim/etc/pip/: constraints.txt
deploy/sim/etc/xdg/openbox/: rc.xml
deploy/sim/home/physicar/: bashrc-append
deploy/sim/home/physicar/.config/tint2/: tint2rc
deploy/sim/home/physicar/.local/share/code-server/User/: settings.json
host/: host_api.py  nginx.conf  physicar.sh
physicar_agent/: CMakeLists.txt  package.xml
physicar_agent/physicar_agent/: __init__.py  agent_node.py  builtin_tools.py  core.py  registry.py
physicar_agent/physicar_agent/builtin/: __init__.py  battery.py  camera.py  control.py  deepracer.py  lidar.py  motion.py  music.py  state.py
physicar_agent/scripts/: agent_node
physicar_bringup/: CMakeLists.txt  package.xml
physicar_bringup/config/: 99-physicar.rules  driver_params.yaml  ekf_params.yaml  nav2_params.yaml  slam_params.yaml
physicar_bringup/launch/: device.launch.py  robot.launch.py  sim.launch.py
physicar_bringup/physicar_bringup/: gpio_pwm_board.py  servo_controller.py  yahboom_board.py
physicar_bringup/scripts/: audio_node.py  camera_proc_node.py  cmd_vel_adapter_node.py  create_udev_rules  physicar_driver_node.py  play_intro.py  scan_filter_node.py  setup_audio.sh  tf_remap_node.py  topic_watchdog_node.py
physicar_bringup/scripts/calibration/: measure_min_speed.py  pulse_coasting_test.py
physicar_bringup/src/: physicar_driver_node.cpp  scan_filter_node.cpp  topic_watchdog_node.cpp
physicar_camera/: CMakeLists.txt  package.xml
physicar_camera/src/: CameraNode.cpp  ParameterHandler.cpp
physicar_deepracer/: CMakeLists.txt  package.xml
physicar_deepracer/config/: deepracer_params.yaml
physicar_deepracer/include/physicar_deepracer/: constants.hpp  inference_engine.hpp  model_loader.hpp
physicar_deepracer/physicar_deepracer/: __init__.py  constants.py  inference_engine.py  model_loader.py
physicar_deepracer/scripts/: deepracer_node.py  test_deepracer.py
physicar_deepracer/src/: deepracer_node.cpp  inference_engine.cpp  model_loader.cpp
physicar_description/: CMakeLists.txt  package.xml
physicar_description/urdf/: common_properties.xacro  physicar.urdf.xacro  physicar_macros.xacro
physicar_interfaces/: CMakeLists.txt  package.xml
physicar_interfaces/msg/: Audio.msg  CalibrationStatus.msg  DeepracerInference.msg  JoyTeleopStatus.msg  TeleopStatus.msg
physicar_interfaces/srv/: DeepracerControl.srv  DeepracerLoadModel.srv  DeepracerSetConfig.srv  DeepracerStatus.srv  DeepracerUnloadModel.srv  GetCalibration.srv  GetJoyMapping.srv  SetCalibration.srv  SetJoyMapping.srv  ToolCall.srv  ToolDelete.srv  ToolGet.srv  ToolInit.srv  ToolList.srv  ToolLoad.srv  ToolReload.srv  ToolReset.srv  ToolSet.srv
physicar_laser_odom/: CMakeLists.txt  LICENSE  package.xml
physicar_laser_odom/include/physicar_laser_odom/: scan_matcher.hpp
physicar_laser_odom/src/: laser_odom_node.cpp
physicar_lidar/: CMakeLists.txt  package.xml
physicar_lidar/scripts/: create_udev_rules.sh
physicar_lidar/src/: rplidar_node.cpp
physicar_teleop/: CMakeLists.txt  package.xml
physicar_teleop/config/: joy_mapping.yaml
physicar_teleop/physicar_teleop/: joy_teleop_node.py
physicar_teleop/scripts/: joy_teleop_node.py
physicar_teleop/src/: joy_teleop_node.cpp
physicar_webserver/: CMakeLists.txt  package.xml  pyproject.toml
physicar_webserver/config/: webserver.yaml
physicar_webserver/launch/: webserver.launch.py
physicar_webserver/physicar_webserver/: __init__.py  audio_manager.py  auth.py  host_exec.py  main.py  ros_bridge.py  sim.py  state_manager.py
physicar_webserver/physicar_webserver/routers/: __init__.py  agent.py  audio.py  auth.py  bluetooth.py  calibration.py  codespaces.py  control.py  deepracer.py  health.py  hw.py  info.py  joy.py  kiosk.py  myapp.py  network.py  pages.py  sim.py  state.py  teleop.py  uistate.py
physicar_webserver/scripts/: webserver_node.py
physicar_webserver/static/: app.html  deepracer.html  index.html  kiosk.html  login.html  studio.html
physicar_webserver/static/css/: agent.css  app.css  control.css  deepracer.css  joy_settings.css  kiosk.css  wifi.css
physicar_webserver/static/js/: agent.js  app.js  bluetooth.js  control.js  core.js  deepracer.js  joy_settings.js  kiosk.js  physicar-session.js  sensors.js  settings.js  wifi.js
rf2o_laser_odometry/include/rf2o_laser_odometry/: CLaserOdometry2D.hpp
rf2o_laser_odometry/src/: CLaserOdometry2D.cpp  CLaserOdometry2DNode.cpp
