<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>physicar_laser_odom</name>
  <version>1.0.0</version>
  <description>2D laser scan odometry using Point-to-Line ICP for PhysiCar</description>
  <maintainer email="contact@physicar.ai">AICASTLE</maintainer>
  <license>Apache-2.0</license>

  <url type="repository">https://github.com/physicar-ai/physicar-ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <build_depend>eigen</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
